Exec can merge stderr with stdout, which required switching from Runtime.exec to ProcessBuilder.